--- a/configs/tsn_resnet50_ucf101_rgb.yaml
+++ b/configs/tsn_resnet50_ucf101_rgb.yaml
@@ -1,23 +1,23 @@
 DATASETS:
-  MODALITY: ('RGB',)
-  NUM_SEGS: 8
+  MODALITY: ('RGB', )
+  NUM_SEGS: 3
   TRAIN:
-    NAME: 'HMDB51'
-    DATA_DIR: 'data/hmdb51/rawframes'
-    ANNOTATION_DIR: 'data/hmdb51'
+    NAME: 'UCF101'
+    DATA_DIR: 'data/ucf101/rawframes'
+    ANNOTATION_DIR: 'data/ucf101'
     SPLIT: 1
   TEST:
-    NAME: 'HMDB51'
-    DATA_DIR: 'data/hmdb51/rawframes'
-    ANNOTATION_DIR: 'data/hmdb51'
+    NAME: 'UCF101'
+    DATA_DIR: 'data/ucf101/rawframes'
+    ANNOTATION_DIR: 'data/ucf101'
     SPLIT: 1
 TRANSFORM:
   INPUT_SIZE: (112, 112, 3)
   MEAN: (0.485, 0.456, 0.406)
   STD: (0.229, 0.224, 0.225)
 DATALOADER:
-  TRAIN_BATCH_SIZE: 16
-  TEST_BATCH_SIZE: 16
+  TRAIN_BATCH_SIZE: 64
+  TEST_BATCH_SIZE: 64
   NUM_WORKERS: 8
 MODEL:
   PRETRAINED: ""
@@ -28,7 +28,7 @@ MODEL:
   HEAD:
     NAME: 'TSNHead'
     FEATURE_DIMS: 2048
-    NUM_CLASSES: 51
+    NUM_CLASSES: 101
   RECOGNIZER:
     NAME: 'TSNRecognizer'
   CONSENSU:
@@ -49,4 +49,4 @@ LR_SCHEDULER:
 TRAIN:
   MAX_ITER: 20000
 OUTPUT:
-  DIR: 'outputs/tsn_resnet50_hmdb51_rgb'
+  DIR: 'outputs/tsn_resnet50_ucf101_rgb'
