--- a/configs/tsn_resnet50_ucf101_rgbdiff.yaml
+++ b/configs/tsn_resnet50_ucf101_rgbdiff.yaml
@@ -1,12 +1,12 @@
 DATASETS:
-  MODALITY: ('RGBDiff', )
+  MODALITY: 'RGBDiff'
   NUM_SEGS: 3
   TRAIN:
     NAME: 'UCF101'
     DATA_DIR: 'data/ucf101/rawframes'
     ANNOTATION_DIR: 'data/ucf101'
     SPLIT: 1
-  TEST:
+  TEST:PARTIAL_BN
     NAME: 'UCF101'
     DATA_DIR: 'data/ucf101/rawframes'
     ANNOTATION_DIR: 'data/ucf101'
