feat(head): 添加dropout层

--- a/configs/tsn_resnet50_jester_rgb.yaml
+++ b/configs/tsn_resnet50_jester_rgb.yaml
@@ -26,6 +26,7 @@ MODEL:
   HEAD:
     NAME: 'TSNHead'
     FEATURE_DIMS: 2048
+    DROPOUT: 0
     NUM_CLASSES: 27
   RECOGNIZER:
     NAME: 'TSNRecognizer'
