--- a/configs/tsn_resnet50_hmdb51_rgb.yaml
+++ b/configs/tsn_resnet50_hmdb51_rgb.yaml
@@ -28,6 +28,7 @@ MODEL:
   HEAD:
     NAME: 'TSNHead'
     FEATURE_DIMS: 2048
+    DROPOUT: 0
     NUM_CLASSES: 51
   RECOGNIZER:
     NAME: 'TSNRecognizer'
