--- a/configs/tsn_resnet50_hmdb51_rgbdiff_224x224x3.yaml
+++ b/configs/tsn_resnet50_hmdb51_rgbdiff_224x224x3.yaml
@@ -2,21 +2,23 @@ DATASETS:
   MODALITY: 'RGBDiff'
   NUM_SEGS: 3
   TRAIN:
-    NAME: 'JESTER'
-    DATA_DIR: 'data/jester/20bn-jester-v1'
-    ANNOTATION_DIR: 'data/jester'
+    NAME: 'HMDB51'
+    DATA_DIR: 'data/hmdb51/rawframes'
+    ANNOTATION_DIR: 'data/hmdb51'
+    SPLIT: 1
   TEST:
-    NAME: 'JESTER'
-    DATA_DIR: 'data/jester/20bn-jester-v1'
-    ANNOTATION_DIR: 'data/jester'
+    NAME: 'HMDB51'
+    DATA_DIR: 'data/hmdb51/rawframes'
+    ANNOTATION_DIR: 'data/hmdb51'
+    SPLIT: 1
 TRANSFORM:
   INPUT_SIZE: (224, 224, 3)
   SMALLER_EDGE: 256
   MEAN: (0.485, 0.456, 0.406)
   STD: (0.229, 0.224, 0.225)
 DATALOADER:
-  TRAIN_BATCH_SIZE: 4
-  TEST_BATCH_SIZE: 4
+  TRAIN_BATCH_SIZE: 16
+  TEST_BATCH_SIZE: 16
   NUM_WORKERS: 8
 MODEL:
   PRETRAINED: ""
@@ -27,8 +29,8 @@ MODEL:
   HEAD:
     NAME: 'TSNHead'
     FEATURE_DIMS: 2048
-    DROPOUT: 0
-    NUM_CLASSES: 27
+    DROPOUT: 0.0
+    NUM_CLASSES: 51
   RECOGNIZER:
     NAME: 'TSNRecognizer'
   CONSENSU:
@@ -37,16 +39,16 @@ MODEL:
     NAME: 'crossentropy'
 OPTIMIZER:
   NAME: 'sgd'
-  LR: 1e-2
-  WEIGHT_DECAY: 3e-4
+  LR: 2e-3
+  WEIGHT_DECAY: 3e-5
   MOMENTUM: 0.9
 LR_SCHEDULER:
   NAME: 'cosine_annearling_lr'
-  MINIMAL_LR: 3e-4
+  MINIMAL_LR: 3e-5
   WARMUP: True
-  ITERATION: 4000
+  ITERATION: 1000
   MULTIPLIER: 1.0
 TRAIN:
-  MAX_ITER: 100000
+  MAX_ITER: 20000
 OUTPUT:
-  DIR: 'outputs/tsn_resnet50_jester_rgbdiff'
+  DIR: 'outputs/tsn_resnet50_hmdb51_rgb_224x224x3'
