--- a/configs/tsn_resnet50_jester_rgb_224x224x3.yaml
+++ b/configs/tsn_resnet50_jester_rgb_224x224x3.yaml
@@ -1,24 +1,22 @@
 DATASETS:
   MODALITY: 'RGB'
-  NUM_SEGS: 8
+  NUM_SEGS: 3
   TRAIN:
-    NAME: 'HMDB51'
-    DATA_DIR: 'data/hmdb51/rawframes'
-    ANNOTATION_DIR: 'data/hmdb51'
-    SPLIT: 1
+    NAME: 'JESTER'
+    DATA_DIR: 'data/jester/20bn-jester-v1'
+    ANNOTATION_DIR: 'data/jester'
   TEST:
-    NAME: 'HMDB51'
-    DATA_DIR: 'data/hmdb51/rawframes'
-    ANNOTATION_DIR: 'data/hmdb51'
-    SPLIT: 1
+    NAME: 'JESTER'
+    DATA_DIR: 'data/jester/20bn-jester-v1'
+    ANNOTATION_DIR: 'data/jester'
 TRANSFORM:
   INPUT_SIZE: (224, 224, 3)
   SMALLER_EDGE: 256
   MEAN: (0.485, 0.456, 0.406)
   STD: (0.229, 0.224, 0.225)
 DATALOADER:
-  TRAIN_BATCH_SIZE: 16
-  TEST_BATCH_SIZE: 16
+  TRAIN_BATCH_SIZE: 32
+  TEST_BATCH_SIZE: 32
   NUM_WORKERS: 8
 MODEL:
   PRETRAINED: ""
@@ -29,8 +27,8 @@ MODEL:
   HEAD:
     NAME: 'TSNHead'
     FEATURE_DIMS: 2048
-    DROPOUT: 0
-    NUM_CLASSES: 51
+    DROPOUT: 0.0
+    NUM_CLASSES: 27
   RECOGNIZER:
     NAME: 'TSNRecognizer'
   CONSENSU:
@@ -39,16 +37,16 @@ MODEL:
     NAME: 'crossentropy'
 OPTIMIZER:
   NAME: 'sgd'
-  LR: 2e-3
-  WEIGHT_DECAY: 3e-5
+  LR: 1e-2
+  WEIGHT_DECAY: 3e-4
   MOMENTUM: 0.9
 LR_SCHEDULER:
   NAME: 'cosine_annearling_lr'
-  MINIMAL_LR: 3e-5
+  MINIMAL_LR: 3e-4
   WARMUP: True
-  ITERATION: 400
+  ITERATION: 1000
   MULTIPLIER: 1.0
 TRAIN:
-  MAX_ITER: 20000
+  MAX_ITER: 50000
 OUTPUT:
-  DIR: 'outputs/tsn_resnet50_hmdb51_rgb'
+  DIR: 'outputs/tsn_resnet50_jester_rgb_224x224x3'
