--- a/configs/tsn_resnet50_ucf101_rgb_224x224x3.yaml
+++ b/configs/tsn_resnet50_ucf101_rgb_224x224x3.yaml
@@ -1,5 +1,5 @@
 DATASETS:
-  MODALITY: 'RGBDiff'
+  MODALITY: 'RGB'
   NUM_SEGS: 3
   TRAIN:
     NAME: 'UCF101'
@@ -17,8 +17,8 @@ TRANSFORM:
   MEAN: (0.485, 0.456, 0.406)
   STD: (0.229, 0.224, 0.225)
 DATALOADER:
-  TRAIN_BATCH_SIZE: 4
-  TEST_BATCH_SIZE: 4
+  TRAIN_BATCH_SIZE: 32
+  TEST_BATCH_SIZE: 32
   NUM_WORKERS: 8
 MODEL:
   PRETRAINED: ""
@@ -29,7 +29,7 @@ MODEL:
   HEAD:
     NAME: 'TSNHead'
     FEATURE_DIMS: 2048
-    DROPOUT: 0
+    DROPOUT: 0.0
     NUM_CLASSES: 101
   RECOGNIZER:
     NAME: 'TSNRecognizer'
@@ -46,9 +46,9 @@ LR_SCHEDULER:
   NAME: 'cosine_annearling_lr'
   MINIMAL_LR: 3e-4
   WARMUP: True
-  ITERATION: 1000
+  ITERATION: 400
   MULTIPLIER: 1.0
 TRAIN:
-  MAX_ITER: 20000
+  MAX_ITER: 50000
 OUTPUT:
-  DIR: 'outputs/tsn_resnet50_ucf101_rgbdiff'
+  DIR: 'outputs/tsn_resnet50_ucf101_rgb_224x224x3'
