--- a/configs/tsn_resnet50_ucf101_rgbdiff_224x224x3.yaml
+++ b/configs/tsn_resnet50_ucf101_rgbdiff_224x224x3.yaml
@@ -1,22 +1,24 @@
 DATASETS:
-  MODALITY: 'RGB'
+  MODALITY: 'RGBDiff'
   NUM_SEGS: 3
   TRAIN:
-    NAME: 'JESTER'
-    DATA_DIR: 'data/jester/20bn-jester-v1'
-    ANNOTATION_DIR: 'data/jester'
+    NAME: 'UCF101'
+    DATA_DIR: 'data/ucf101/rawframes'
+    ANNOTATION_DIR: 'data/ucf101'
+    SPLIT: 1
   TEST:
-    NAME: 'JESTER'
-    DATA_DIR: 'data/jester/20bn-jester-v1'
-    ANNOTATION_DIR: 'data/jester'
+    NAME: 'UCF101'
+    DATA_DIR: 'data/ucf101/rawframes'
+    ANNOTATION_DIR: 'data/ucf101'
+    SPLIT: 1
 TRANSFORM:
   INPUT_SIZE: (224, 224, 3)
   SMALLER_EDGE: 256
   MEAN: (0.485, 0.456, 0.406)
   STD: (0.229, 0.224, 0.225)
 DATALOADER:
-  TRAIN_BATCH_SIZE: 32
-  TEST_BATCH_SIZE: 32
+  TRAIN_BATCH_SIZE: 4
+  TEST_BATCH_SIZE: 4
   NUM_WORKERS: 8
 MODEL:
   PRETRAINED: ""
@@ -27,8 +29,8 @@ MODEL:
   HEAD:
     NAME: 'TSNHead'
     FEATURE_DIMS: 2048
-    DROPOUT: 0
-    NUM_CLASSES: 27
+    DROPOUT: 0.0
+    NUM_CLASSES: 101
   RECOGNIZER:
     NAME: 'TSNRecognizer'
   CONSENSU:
@@ -47,6 +49,6 @@ LR_SCHEDULER:
   ITERATION: 1000
   MULTIPLIER: 1.0
 TRAIN:
-  MAX_ITER: 50000
+  MAX_ITER: 20000
 OUTPUT:
-  DIR: 'outputs/tsn_resnet50_jester_rgb'
+  DIR: 'outputs/tsn_resnet50_ucf101_rgbdiff_224x224x3'
