--- a/configs/tsn_resnet50_ucf101_rgbdiff_224x224x3.yaml
+++ b/configs/tsn_resnet50_ucf101_rgbdiff_224x224x3.yaml
@@ -17,11 +17,12 @@ TRANSFORM:
   MEAN: (0.485, 0.456, 0.406)
   STD: (0.229, 0.224, 0.225)
 DATALOADER:
-  TRAIN_BATCH_SIZE: 4
-  TEST_BATCH_SIZE: 4
+  TRAIN_BATCH_SIZE: 6
+  TEST_BATCH_SIZE: 6
   NUM_WORKERS: 8
 MODEL:
   PRETRAINED: ""
+  SYNC_BN: True
   BACKBONE:
     NAME: 'resnet50'
     PARTIAL_BN: False
@@ -41,7 +42,8 @@ OPTIMIZER:
   NAME: 'sgd'
   LR: 1e-2
   WEIGHT_DECAY: 3e-4
-  MOMENTUM: 0.9
+  SGD:
+    MOMENTUM: 0.9
 LR_SCHEDULER:
   NAME: 'cosine_annearling_lr'
   MINIMAL_LR: 3e-4
@@ -49,6 +51,6 @@ LR_SCHEDULER:
   ITERATION: 1000
   MULTIPLIER: 1.0
 TRAIN:
-  MAX_ITER: 20000
+  MAX_ITER: 50000
 OUTPUT:
   DIR: 'outputs/tsn_resnet50_ucf101_rgbdiff_224x224x3'
