--- a/configs/tsn_resnet50_hmdb51_rgb_224x224x3.yaml
+++ b/configs/tsn_resnet50_hmdb51_rgb_224x224x3.yaml
@@ -22,6 +22,7 @@ DATALOADER:
   NUM_WORKERS: 8
 MODEL:
   PRETRAINED: ""
+  SYNC_BN: True
   BACKBONE:
     NAME: 'resnet50'
     PARTIAL_BN: False
@@ -41,7 +42,8 @@ OPTIMIZER:
   NAME: 'sgd'
   LR: 2e-3
   WEIGHT_DECAY: 3e-5
-  MOMENTUM: 0.9
+  SGD:
+    MOMENTUM: 0.9
 LR_SCHEDULER:
   NAME: 'cosine_annearling_lr'
   MINIMAL_LR: 3e-5
@@ -49,6 +51,6 @@ LR_SCHEDULER:
   ITERATION: 400
   MULTIPLIER: 1.0
 TRAIN:
-  MAX_ITER: 20000
+  MAX_ITER: 30000
 OUTPUT:
   DIR: 'outputs/tsn_resnet50_hmdb51_rgb_224x224x3'
