--- a/configs/tsn_resnet50_jester_rgbdiff_224x224x3.yaml
+++ b/configs/tsn_resnet50_jester_rgbdiff_224x224x3.yaml
@@ -20,6 +20,7 @@ DATALOADER:
   NUM_WORKERS: 8
 MODEL:
   PRETRAINED: ""
+  SYNC_BN: True
   BACKBONE:
     NAME: 'resnet50'
     PARTIAL_BN: False
@@ -39,7 +40,8 @@ OPTIMIZER:
   NAME: 'sgd'
   LR: 1e-2
   WEIGHT_DECAY: 3e-4
-  MOMENTUM: 0.9
+  SGD:
+    MOMENTUM: 0.9
 LR_SCHEDULER:
   NAME: 'cosine_annearling_lr'
   MINIMAL_LR: 3e-4
