perf(config): 细化不同lr_scheduler配置

--- a/configs/tsn_resnet50_jester_rgbdiff_224x224x3.yaml
+++ b/configs/tsn_resnet50_jester_rgbdiff_224x224x3.yaml
@@ -44,10 +44,12 @@ OPTIMIZER:
     MOMENTUM: 0.9
 LR_SCHEDULER:
   NAME: 'cosine_annearling_lr'
-  MINIMAL_LR: 3e-4
-  WARMUP: True
-  ITERATION: 4000
-  MULTIPLIER: 1.0
+  IS_WARMUP: True
+  COSINE_ANNEALING_LR:
+    MINIMAL_LR: 3e-4
+  WARMUP:
+    ITERATION: 1000
+    MULTIPLIER: 1.0
 TRAIN:
   MAX_ITER: 100000
 OUTPUT:
