perf(config): 使用adam作为优化器

--- a/configs/tsn_resnet50_hmdb51_rgb_224x224x3.yaml
+++ b/configs/tsn_resnet50_hmdb51_rgb_224x224x3.yaml
@@ -39,11 +39,9 @@ MODEL:
   CRITERION:
     NAME: 'crossentropy'
 OPTIMIZER:
-  NAME: 'sgd'
-  LR: 2e-3
+  NAME: 'adam'
+  LR: 3e-4
   WEIGHT_DECAY: 3e-5
-  SGD:
-    MOMENTUM: 0.9
 LR_SCHEDULER:
   NAME: 'cosine_annearling_lr'
   IS_WARMUP: True
