--- a/configs/tsn_resnet50_jester_rgb_224x224x3.yaml
+++ b/configs/tsn_resnet50_jester_rgb_224x224x3.yaml
@@ -37,11 +37,9 @@ MODEL:
   CRITERION:
     NAME: 'crossentropy'
 OPTIMIZER:
-  NAME: 'sgd'
-  LR: 1e-2
-  WEIGHT_DECAY: 3e-4
-  SGD:
-    MOMENTUM: 0.9
+  NAME: 'adam'
+  LR: 3e-4
+  WEIGHT_DECAY: 3e-5
 LR_SCHEDULER:
   NAME: 'cosine_annearling_lr'
   IS_WARMUP: True
