--- a/configs/tsn_resnet50_ucf101_rgb_224x224x3.yaml
+++ b/configs/tsn_resnet50_ucf101_rgb_224x224x3.yaml
@@ -13,7 +13,7 @@ DATASETS:
     SPLIT: 1
 TRANSFORM:
   INPUT_SIZE: (224, 224, 3)
-  SMALLER_EDGE: 256
+  RANDOM_RESIZE_RANGE: (256, 320)
   MEAN: (0.485, 0.456, 0.406)
   STD: (0.229, 0.224, 0.225)
 DATALOADER:
@@ -39,18 +39,20 @@ MODEL:
   CRITERION:
     NAME: 'crossentropy'
 OPTIMIZER:
-  NAME: 'adam'
-  LR: 3e-4
-  WEIGHT_DECAY: 3e-5
+  NAME: 'sgd'
+  LR: 2e-3
+  WEIGHT_DECAY: 3e-4
+  SGD:
+    MOMENTUM: 0.9
 LR_SCHEDULER:
   NAME: 'cosine_annearling_lr'
   IS_WARMUP: True
   COSINE_ANNEALING_LR:
-    MINIMAL_LR: 3e-5
+    MINIMAL_LR: 3e-4
   WARMUP:
-    ITERATION: 1000
+    ITERATION: 400
     MULTIPLIER: 1.0
 TRAIN:
-  MAX_ITER: 50000
+  MAX_ITER: 20000
 OUTPUT:
   DIR: 'outputs/tsn_resnet50_ucf101_rgb_224x224x3'
