--- a/configs/tsn_r50_hmdb51_rgbdiff_224x224x3.yaml
+++ b/configs/tsn_r50_hmdb51_rgbdiff_224x224x3.yaml
@@ -2,13 +2,15 @@ DATASETS:
   MODALITY: 'RGBDiff'
   NUM_SEGS: 3
   TRAIN:
-    NAME: 'JESTER'
-    DATA_DIR: 'data/jester/20bn-jester-v1'
-    ANNOTATION_DIR: 'data/jester'
+    NAME: 'HMDB51'
+    DATA_DIR: 'data/hmdb51/rawframes'
+    ANNOTATION_DIR: 'data/hmdb51'
+    SPLIT: 1
   TEST:
-    NAME: 'JESTER'
-    DATA_DIR: 'data/jester/20bn-jester-v1'
-    ANNOTATION_DIR: 'data/jester'
+    NAME: 'HMDB51'
+    DATA_DIR: 'data/hmdb51/rawframes'
+    ANNOTATION_DIR: 'data/hmdb51'
+    SPLIT: 1
 TRANSFORM:
   INPUT_SIZE: (224, 224, 3)
   RANDOM_RESIZE_RANGE: (256, 320)
@@ -19,6 +21,7 @@ DATALOADER:
   TEST_BATCH_SIZE: 8
   NUM_WORKERS: 8
 MODEL:
+  NAME: 'TSN'
   PRETRAINED: ""
   SYNC_BN: True
   BACKBONE:
@@ -29,7 +32,7 @@ MODEL:
     NAME: 'TSNHead'
     FEATURE_DIMS: 2048
     DROPOUT: 0.0
-    NUM_CLASSES: 27
+    NUM_CLASSES: 51
   RECOGNIZER:
     NAME: 'TSNRecognizer'
   CONSENSU:
@@ -51,6 +54,6 @@ LR_SCHEDULER:
     ITERATION: 1000
     MULTIPLIER: 1.0
 TRAIN:
-  MAX_ITER: 50000
+  MAX_ITER: 20000
 OUTPUT:
-  DIR: 'outputs/tsn_resnet50_jester_rgbdiff_224x224x3'
+  DIR: 'outputs/tsn_r50_hmdb51_rgb_224x224x3'
