--- a/configs/tsn_r50_ucf101_rgbdiff_224x224x3.yaml
+++ b/configs/tsn_r50_ucf101_rgbdiff_224x224x3.yaml
@@ -2,14 +2,14 @@ DATASETS:
   MODALITY: 'RGBDiff'
   NUM_SEGS: 3
   TRAIN:
-    NAME: 'HMDB51'
-    DATA_DIR: 'data/hmdb51/rawframes'
-    ANNOTATION_DIR: 'data/hmdb51'
+    NAME: 'UCF101'
+    DATA_DIR: 'data/ucf101/rawframes'
+    ANNOTATION_DIR: 'data/ucf101'
     SPLIT: 1
   TEST:
-    NAME: 'HMDB51'
-    DATA_DIR: 'data/hmdb51/rawframes'
-    ANNOTATION_DIR: 'data/hmdb51'
+    NAME: 'UCF101'
+    DATA_DIR: 'data/ucf101/rawframes'
+    ANNOTATION_DIR: 'data/ucf101'
     SPLIT: 1
 TRANSFORM:
   INPUT_SIZE: (224, 224, 3)
@@ -17,10 +17,11 @@ TRANSFORM:
   MEAN: (0.485, 0.456, 0.406)
   STD: (0.229, 0.224, 0.225)
 DATALOADER:
-  TRAIN_BATCH_SIZE: 8
-  TEST_BATCH_SIZE: 8
+  TRAIN_BATCH_SIZE: 6
+  TEST_BATCH_SIZE: 6
   NUM_WORKERS: 8
 MODEL:
+  NAME: 'TSN'
   PRETRAINED: ""
   SYNC_BN: True
   BACKBONE:
@@ -31,7 +32,7 @@ MODEL:
     NAME: 'TSNHead'
     FEATURE_DIMS: 2048
     DROPOUT: 0.0
-    NUM_CLASSES: 51
+    NUM_CLASSES: 101
   RECOGNIZER:
     NAME: 'TSNRecognizer'
   CONSENSU:
@@ -55,4 +56,4 @@ LR_SCHEDULER:
 TRAIN:
   MAX_ITER: 20000
 OUTPUT:
-  DIR: 'outputs/tsn_resnet50_hmdb51_rgb_224x224x3'
+  DIR: 'outputs/tsn_r50_ucf101_rgbdiff_224x224x3'
