--- a/configs/tsn_r50_jester_rgb_224x224x3.yaml
+++ b/configs/tsn_r50_jester_rgb_224x224x3.yaml
@@ -10,8 +10,9 @@ DATASETS:
     DATA_DIR: 'data/jester/20bn-jester-v1'
     ANNOTATION_DIR: 'data/jester'
 TRANSFORM:
-  INPUT_SIZE: (224, 224, 3)
-  RANDOM_RESIZE_RANGE: (256, 320)
+  TRAIN_CROP_SIZE: 224
+  TEST_CROP_SIZE: 256
+  JITTER_SCALES: (256, 320)
   MEAN: (0.485, 0.456, 0.406)
   STD: (0.229, 0.224, 0.225)
 DATALOADER:
@@ -21,7 +22,8 @@ DATALOADER:
 MODEL:
   NAME: 'TSN'
   PRETRAINED: ""
-  SYNC_BN: True
+  SYNC_BN: False
+  INPUT_SIZE: (224, 224, 3)
   BACKBONE:
     NAME: 'resnet50'
     PARTIAL_BN: False
