perf(dataset): 更新数据集采样参数

--- a/configs/tsn_r50_hmdb51_rgbdiff_224x224x3.yaml
+++ b/configs/tsn_r50_hmdb51_rgbdiff_224x224x3.yaml
@@ -1,6 +1,9 @@
 DATASETS:
   MODALITY: 'RGBDiff'
-  NUM_SEGS: 3
+  SAMPLE_STRATEGY: 'SegSample'
+  CLIP_LEN: 5
+  FRAME_INTERVAL: 1
+  NUM_CLIPS: 3
   TRAIN:
     NAME: 'HMDB51'
     DATA_DIR: 'data/hmdb51/rawframes'
