--- a/configs/tsn_r50_ucf101_rgbdiff_224x224x3.yaml
+++ b/configs/tsn_r50_ucf101_rgbdiff_224x224x3.yaml
@@ -1,6 +1,9 @@
 DATASETS:
   MODALITY: 'RGBDiff'
-  NUM_SEGS: 3
+  SAMPLE_STRATEGY: 'SegSample'
+  CLIP_LEN: 5
+  FRAME_INTERVAL: 1
+  NUM_CLIPS: 3
   TRAIN:
     NAME: 'UCF101'
     DATA_DIR: 'data/ucf101/rawframes'
