--- a/configs/tsn_r50_hmdb51_rgb_224x3_seg.yaml
+++ b/configs/tsn_r50_hmdb51_rgb_224x3_seg.yaml
@@ -5,14 +5,14 @@ DATASETS:
   FRAME_INTERVAL: 1
   NUM_CLIPS: 3
   TRAIN:
-    NAME: 'UCF101'
-    DATA_DIR: 'data/ucf101/rawframes'
-    ANNOTATION_DIR: 'data/ucf101'
+    NAME: 'HMDB51'
+    DATA_DIR: 'data/hmdb51/rawframes'
+    ANNOTATION_DIR: 'data/hmdb51'
     SPLIT: 1
   TEST:
-    NAME: 'UCF101'
-    DATA_DIR: 'data/ucf101/rawframes'
-    ANNOTATION_DIR: 'data/ucf101'
+    NAME: 'HMDB51'
+    DATA_DIR: 'data/hmdb51/rawframes'
+    ANNOTATION_DIR: 'data/hmdb51'
     SPLIT: 1
 TRANSFORM:
   TRAIN_CROP_SIZE: 224
@@ -27,7 +27,7 @@ DATALOADER:
 MODEL:
   NAME: 'TSN'
   PRETRAINED: ""
-  SYNC_BN: True
+  SYNC_BN: False
   INPUT_SIZE: (224, 224, 3)
   BACKBONE:
     NAME: 'resnet50'
@@ -37,7 +37,7 @@ MODEL:
     NAME: 'TSNHead'
     FEATURE_DIMS: 2048
     DROPOUT: 0.0
-    NUM_CLASSES: 101
+    NUM_CLASSES: 51
   RECOGNIZER:
     NAME: 'TSNRecognizer'
   CONSENSU:
@@ -46,7 +46,7 @@ MODEL:
     NAME: 'crossentropy'
 OPTIMIZER:
   NAME: 'sgd'
-  LR: 1e-3
+  LR: 2e-3
   WEIGHT_DECAY: 3e-4
   SGD:
     MOMENTUM: 0.9
@@ -59,6 +59,6 @@ LR_SCHEDULER:
     ITERATION: 400
     MULTIPLIER: 1.0
 TRAIN:
-  MAX_ITER: 30000
+  MAX_ITER: 10000
 OUTPUT:
-  DIR: 'outputs/tsn_r50_ucf101_rgb_224x224x3'
+  DIR: 'outputs/tsn_r50_hmdb51_rgb_224x3_seg'
