refactor(configs): 更新Transform模块配置

--- a/configs/tsn_r50_hmdb51_rgbdiff_224x3_seg.yaml
+++ b/configs/tsn_r50_hmdb51_rgbdiff_224x3_seg.yaml
@@ -20,6 +20,8 @@ TRANSFORM:
   JITTER_SCALES: (256, 320)
   MEAN: (0.485, 0.456, 0.406)
   STD: (0.229, 0.224, 0.225)
+  RANDOM_ROTATION: 10
+  COLOR_JITTER: (0.1, 0.1, 0.1, 0.1)
 DATALOADER:
   TRAIN_BATCH_SIZE: 8
   TEST_BATCH_SIZE: 8
