refactor(config): 配置resnet zero_init_residual

--- a/configs/tsn_r50_jester_rgb_224x3_seg.yaml
+++ b/configs/tsn_r50_jester_rgb_224x3_seg.yaml
@@ -33,6 +33,7 @@ MODEL:
     NAME: 'resnet50'
     PARTIAL_BN: False
     TORCHVISION_PRETRAINED: True
+    ZERO_INIT_RESIDUAL: True
   HEAD:
     NAME: 'TSNHead'
     FEATURE_DIMS: 2048
