--- a/configs/tsn_r50_hmdb51_rgb_224x3_seg.yaml
+++ b/configs/tsn_r50_hmdb51_rgb_224x3_seg.yaml
@@ -1,3 +1,17 @@
+RNG_SEED: 0
+NUM_GPUS: 1
+NODES: 1
+RANK: 0
+WORLD_SIZE: 1
+TRAIN:
+  MAX_ITER: 20000
+  LOG_STEP: 10
+  SAVE_STEP: 1000
+  EVAL_STEP: 1000
+  RESUME: False
+  USE_TENSORBOARD: True
+OUTPUT:
+  DIR: 'outputs/tsn_r50_hmdb51_rgb_224x3_seg'
 DATASETS:
   MODALITY: 'RGB'
   SAMPLE_STRATEGY: 'SegSample'
@@ -61,7 +75,3 @@ LR_SCHEDULER:
   WARMUP:
     ITERATION: 400
     MULTIPLIER: 1.0
-TRAIN:
-  MAX_ITER: 10000
-OUTPUT:
-  DIR: 'outputs/tsn_r50_hmdb51_rgb_224x3_seg'
