--- a/configs/tsn_r50_jester_rgbdiff_224x3_seg.yaml
+++ b/configs/tsn_r50_jester_rgbdiff_224x3_seg.yaml
@@ -29,7 +29,7 @@ DATASETS:
 TRANSFORM:
   TRAIN_CROP_SIZE: 224
   TEST_CROP_SIZE: 256
-  JITTER_SCALES: (256, 320)
+  SCALE_JITTER: (256, 320)
   MEAN: (0.485, 0.456, 0.406)
   STD: (0.229, 0.224, 0.225)
   RANDOM_ROTATION: 10
