style(config_file): rename

--- a/configs/tsn_r50_jester_rgb_raw_seg_1x1x3.yaml
+++ b/configs/tsn_r50_jester_rgb_raw_seg_1x1x3.yaml
@@ -4,18 +4,19 @@ NODES: 1
 RANK: 0
 WORLD_SIZE: 1
 TRAIN:
-  MAX_ITER: 50000
+  MAX_ITER: 30000
   LOG_STEP: 10
   SAVE_STEP: 1000
   EVAL_STEP: 1000
   RESUME: False
   USE_TENSORBOARD: True
 OUTPUT:
-  DIR: 'outputs/tsn_r50_jester_rgbdiff_224x3_seg'
+  DIR: 'outputs/tsn_r50_jester_rgb_raw_seg_1x1x3'
 DATASETS:
-  MODALITY: 'RGBDiff'
+  MODALITY: 'RGB'
+  TYPE: 'RawFrame'
   SAMPLE_STRATEGY: 'SegSample'
-  CLIP_LEN: 5
+  CLIP_LEN: 1
   FRAME_INTERVAL: 1
   NUM_CLIPS: 3
   TRAIN:
@@ -35,13 +36,13 @@ TRANSFORM:
   RANDOM_ROTATION: 10
   COLOR_JITTER: (0.1, 0.1, 0.1, 0.1)
 DATALOADER:
-  TRAIN_BATCH_SIZE: 8
-  TEST_BATCH_SIZE: 8
+  TRAIN_BATCH_SIZE: 32
+  TEST_BATCH_SIZE: 32
   NUM_WORKERS: 8
 MODEL:
   NAME: 'TSN'
   PRETRAINED: ""
-  SYNC_BN: True
+  SYNC_BN: False
   INPUT_SIZE: (224, 224, 3)
   BACKBONE:
     NAME: 'resnet50'
