--- a/configs/tsn_r50_hmdb51_rgb_raw_seg_1x1x3.yaml
+++ b/configs/tsn_r50_hmdb51_rgb_raw_seg_1x1x3.yaml
@@ -4,28 +4,31 @@ NODES: 1
 RANK: 0
 WORLD_SIZE: 1
 TRAIN:
-  MAX_ITER: 30000
+  MAX_ITER: 20000
   LOG_STEP: 10
   SAVE_STEP: 1000
   EVAL_STEP: 1000
   RESUME: False
   USE_TENSORBOARD: True
 OUTPUT:
-  DIR: 'outputs/tsn_r50_jester_rgb_224x3_seg'
+  DIR: 'outputs/tsn_r50_hmdb51_rgb_raw_seg_1x1x3'
 DATASETS:
   MODALITY: 'RGB'
+  TYPE: 'RawFrame'
   SAMPLE_STRATEGY: 'SegSample'
   CLIP_LEN: 1
   FRAME_INTERVAL: 1
   NUM_CLIPS: 3
   TRAIN:
-    NAME: 'JESTER'
-    DATA_DIR: 'data/jester/20bn-jester-v1'
-    ANNOTATION_DIR: 'data/jester'
+    NAME: 'HMDB51'
+    DATA_DIR: 'data/hmdb51/rawframes'
+    ANNOTATION_DIR: 'data/hmdb51'
+    SPLIT: 1
   TEST:
-    NAME: 'JESTER'
-    DATA_DIR: 'data/jester/20bn-jester-v1'
-    ANNOTATION_DIR: 'data/jester'
+    NAME: 'HMDB51'
+    DATA_DIR: 'data/hmdb51/rawframes'
+    ANNOTATION_DIR: 'data/hmdb51'
+    SPLIT: 1
 TRANSFORM:
   TRAIN_CROP_SIZE: 224
   TEST_CROP_SIZE: 256
@@ -52,7 +55,7 @@ MODEL:
     NAME: 'TSNHead'
     FEATURE_DIMS: 2048
     DROPOUT: 0.0
-    NUM_CLASSES: 27
+    NUM_CLASSES: 51
   RECOGNIZER:
     NAME: 'TSNRecognizer'
   CONSENSU:
@@ -71,5 +74,5 @@ LR_SCHEDULER:
   COSINE_ANNEALING_LR:
     MINIMAL_LR: 3e-4
   WARMUP:
-    ITERATION: 1000
+    ITERATION: 400
     MULTIPLIER: 1.0
