--- a/configs/tsn_r50_ucf101_rgb_raw_seg_1x1x3.yaml
+++ b/configs/tsn_r50_ucf101_rgb_raw_seg_1x1x3.yaml
@@ -11,13 +11,14 @@ TRAIN:
   RESUME: False
   USE_TENSORBOARD: True
 OUTPUT:
-  DIR: 'outputs/tsn_r50_ucf101_rgb_224x4_dense'
+  DIR: 'outputs/tsn_r50_ucf101_rgb_raw_seg_1x1x3'
 DATASETS:
   MODALITY: 'RGB'
-  SAMPLE_STRATEGY: 'DenseSample'
+  TYPE: 'RawFrame'
+  SAMPLE_STRATEGY: 'SegSample'
   CLIP_LEN: 1
-  FRAME_INTERVAL: 16
-  NUM_CLIPS: 4
+  FRAME_INTERVAL: 1
+  NUM_CLIPS: 3
   TRAIN:
     NAME: 'UCF101'
     DATA_DIR: 'data/ucf101/rawframes'
@@ -37,8 +38,8 @@ TRANSFORM:
   RANDOM_ROTATION: 10
   COLOR_JITTER: (0.1, 0.1, 0.1, 0.1)
 DATALOADER:
-  TRAIN_BATCH_SIZE: 24
-  TEST_BATCH_SIZE: 48
+  TRAIN_BATCH_SIZE: 32
+  TEST_BATCH_SIZE: 32
   NUM_WORKERS: 8
 MODEL:
   NAME: 'TSN'
@@ -53,7 +54,7 @@ MODEL:
   HEAD:
     NAME: 'TSNHead'
     FEATURE_DIMS: 2048
-    DROPOUT: 0.5
+    DROPOUT: 0.0
     NUM_CLASSES: 101
   RECOGNIZER:
     NAME: 'TSNRecognizer'
@@ -77,7 +78,6 @@ LR_SCHEDULER:
     MULTIPLIER: 1.0
 DEMO:
   ENABLE: True
-  INPUT_VIDEO: './demo/v_Rowing_g15_c04.avi'
-  OUTPUT_FILE: './demo/v_Rowing_g15_c04.avi'
+  INPUT_VIDEO: './data/ucf101/videos/YoYo/v_YoYo_g18_c04.avi'
+  #  OUTPUT_FILE: './outputs/YoYo_output.avi'
   LABEL_FILE_PATH: './data/ucf101/annotations/class2idx.json'
-  BUFFER_SIZE: 32
