refactor(config): 单独配置demo可视化

--- a/demo/tsn_r50_ucf101_rgb_raw_dense_1x16x4.yaml
+++ b/demo/tsn_r50_ucf101_rgb_raw_dense_1x16x4.yaml
@@ -43,7 +43,7 @@ DATALOADER:
   NUM_WORKERS: 8
 MODEL:
   NAME: 'TSN'
-  PRETRAINED: ''
+  PRETRAINED: './outputs/tsn_r50_ucf101_rgb_224x4_dense/model_012000.pth'
   SYNC_BN: True
   INPUT_SIZE: (224, 224, 3)
   BACKBONE:
@@ -76,3 +76,9 @@ LR_SCHEDULER:
   WARMUP:
     ITERATION: 400
     MULTIPLIER: 1.0
+DEMO:
+  ENABLE: True
+  INPUT_VIDEO: './demo/v_Rowing_g15_c04.avi'
+  #  OUTPUT_FILE: './demo/v_Rowing_g15_c04_out.avi'
+  LABEL_FILE_PATH: './data/ucf101/annotations/class2idx.json'
+  NUM_VIS_INSTANCES: 8
