--- a/configs/tsn_r50_hmdb51_rgb_raw_seg_1x1x3.yaml
+++ b/configs/tsn_r50_hmdb51_rgb_raw_seg_1x1x3.yaml
@@ -61,7 +61,7 @@ MODEL:
   CONSENSU:
     NAME: 'AvgConsensus'
   CRITERION:
-    NAME: 'crossentropy'
+    NAME: 'CrossEntropyLoss'
 OPTIMIZER:
   NAME: 'sgd'
   LR: 2e-3
