--- a/configs/tsn_r50_jester_rgbdiff_raw_seg_1x1x3.yaml
+++ b/configs/tsn_r50_jester_rgbdiff_raw_seg_1x1x3.yaml
@@ -59,7 +59,7 @@ MODEL:
   CONSENSU:
     NAME: 'AvgConsensus'
   CRITERION:
-    NAME: 'crossentropy'
+    NAME: 'CrossEntropyLoss'
 OPTIMIZER:
   NAME: 'sgd'
   LR: 2e-3
