--- a/demo/tsn_r50_ucf101_rgb_raw_dense_1x16x4.yaml
+++ b/demo/tsn_r50_ucf101_rgb_raw_dense_1x16x4.yaml
@@ -61,7 +61,7 @@ MODEL:
   CONSENSU:
     NAME: 'AvgConsensus'
   CRITERION:
-    NAME: 'crossentropy'
+    NAME: 'CrossEntropyLoss'
 OPTIMIZER:
   NAME: 'sgd'
   LR: 1e-3
