--- a/configs/tsn_r50_ucf101_rgb_raw_dense_1x16x4.yaml
+++ b/configs/tsn_r50_ucf101_rgb_raw_dense_1x16x4.yaml
@@ -4,11 +4,11 @@ NODES: 1
 RANK: 0
 WORLD_SIZE: 1
 TRAIN:
-  MAX_ITER: 30000
+  MAX_ITER: 3000
   LOG_STEP: 10
   SAVE_STEP: 1000
   EVAL_STEP: 1000
-  RESUME: False
+  RESUME: True
   USE_TENSORBOARD: True
 OUTPUT:
   DIR: 'outputs/tsn_r50_ucf101_rgb_raw_dense_1x16x4'
@@ -19,6 +19,7 @@ DATASETS:
   CLIP_LEN: 1
   FRAME_INTERVAL: 16
   NUM_CLIPS: 4
+  NUM_SAMPLE_POSITIONS: 1
   TRAIN:
     NAME: 'UCF101'
     DATA_DIR: 'data/ucf101/rawframes'
@@ -30,13 +31,21 @@ DATASETS:
     ANNOTATION_DIR: 'data/ucf101'
     SPLIT: 1
 TRANSFORM:
-  TRAIN_CROP_SIZE: 224
-  TEST_CROP_SIZE: 256
-  SCALE_JITTER: (256, 320)
   MEAN: (0.485, 0.456, 0.406)
   STD: (0.229, 0.224, 0.225)
-  RANDOM_ROTATION: 10
-  COLOR_JITTER: (0.1, 0.1, 0.1, 0.1)
+  TRAIN:
+    SCALE_JITTER: (256, 320)
+    RANDOM_HORIZONTAL_FLIP: True
+    COLOR_JITTER: (0.1, 0.1, 0.1, 0.1)
+    RANDOM_ROTATION: 10
+    RANDOM_CROP: True
+    TRAIN_CROP_SIZE: 224
+    RANDOM_ERASING: True
+  TEST:
+    SHORTER_SIDE: 256
+    CENTER_CROP: True
+    THREE_CROP: False
+    TEST_CROP_SIZE: 256
 DATALOADER:
   TRAIN_BATCH_SIZE: 24
   TEST_BATCH_SIZE: 48
