build(git): 忽略视频文件

--- a/configs/tsn_r50_ucf101_rgb_raw_dense_1x16x4.yaml
+++ b/configs/tsn_r50_ucf101_rgb_raw_dense_1x16x4.yaml
@@ -4,11 +4,11 @@ NODES: 1
 RANK: 0
 WORLD_SIZE: 1
 TRAIN:
-  MAX_ITER: 3000
+  MAX_ITER: 30000
   LOG_STEP: 10
   SAVE_STEP: 1000
   EVAL_STEP: 1000
-  RESUME: True
+  RESUME: False
   USE_TENSORBOARD: True
 OUTPUT:
   DIR: 'outputs/tsn_r50_ucf101_rgb_raw_dense_1x16x4'
@@ -19,7 +19,7 @@ DATASETS:
   CLIP_LEN: 1
   FRAME_INTERVAL: 16
   NUM_CLIPS: 4
-  NUM_SAMPLE_POSITIONS: 1
+  NUM_SAMPLE_POSITIONS: 10
   TRAIN:
     NAME: 'UCF101'
     DATA_DIR: 'data/ucf101/rawframes'
@@ -43,12 +43,12 @@ TRANSFORM:
     RANDOM_ERASING: True
   TEST:
     SHORTER_SIDE: 256
-    CENTER_CROP: True
-    THREE_CROP: False
+    CENTER_CROP: False
+    THREE_CROP: True
     TEST_CROP_SIZE: 256
 DATALOADER:
   TRAIN_BATCH_SIZE: 24
-  TEST_BATCH_SIZE: 48
+  TEST_BATCH_SIZE: 4
   NUM_WORKERS: 8
 MODEL:
   NAME: 'TSN'
