--- a/configs/tsn_r50_hmdb51_rgbdiff_raw_seg_1x1x3.yaml
+++ b/configs/tsn_r50_hmdb51_rgbdiff_raw_seg_1x1x3.yaml
@@ -1,8 +1,9 @@
-RNG_SEED: 0
 NUM_GPUS: 1
-NODES: 1
-RANK: 0
-WORLD_SIZE: 1
+NUM_NODES: 1
+RANK_ID: 0
+DIST_BACKEND: "nccl"
+RNG_SEED: 1
+OUTPUT_DIR: 'outputs/tsn_r50_hmdb51_rgbdiff_raw_seg_1x1x3'
 TRAIN:
   MAX_ITER: 20000
   LOG_STEP: 10
@@ -10,8 +11,6 @@ TRAIN:
   EVAL_STEP: 1000
   RESUME: False
   USE_TENSORBOARD: True
-OUTPUT:
-  DIR: 'outputs/tsn_r50_hmdb51_rgbdiff_raw_seg_1x1x3'
 DATASETS:
   MODALITY: 'RGBDiff'
   TYPE: 'RawFrame'
