--- a/configs/tsn_r50_ucf101_rgb_raw_dense_1x16x4.yaml
+++ b/configs/tsn_r50_ucf101_rgb_raw_dense_1x16x4.yaml
@@ -1,8 +1,9 @@
-RNG_SEED: 0
 NUM_GPUS: 1
-NODES: 1
-RANK: 0
-WORLD_SIZE: 1
+NUM_NODES: 1
+RANK_ID: 0
+DIST_BACKEND: "nccl"
+RNG_SEED: 1
+OUTPUT_DIR: 'outputs/tsn_r50_ucf101_rgb_raw_dense_1x16x4'
 TRAIN:
   MAX_ITER: 30000
   LOG_STEP: 10
@@ -10,8 +11,6 @@ TRAIN:
   EVAL_STEP: 1000
   RESUME: False
   USE_TENSORBOARD: True
-OUTPUT:
-  DIR: 'outputs/tsn_r50_ucf101_rgb_raw_dense_1x16x4'
 DATASETS:
   MODALITY: 'RGB'
   TYPE: 'RawFrame'
@@ -19,7 +18,7 @@ DATASETS:
   CLIP_LEN: 1
   FRAME_INTERVAL: 16
   NUM_CLIPS: 4
-  NUM_SAMPLE_POSITIONS: 10
+  NUM_SAMPLE_POSITIONS: 1
   TRAIN:
     NAME: 'UCF101'
     DATA_DIR: 'data/ucf101/rawframes'
@@ -43,12 +42,12 @@ TRANSFORM:
     RANDOM_ERASING: True
   TEST:
     SHORTER_SIDE: 256
-    CENTER_CROP: False
-    THREE_CROP: True
+    CENTER_CROP: True
+    THREE_CROP: False
     TEST_CROP_SIZE: 256
 DATALOADER:
   TRAIN_BATCH_SIZE: 24
-  TEST_BATCH_SIZE: 4
+  TEST_BATCH_SIZE: 24
   NUM_WORKERS: 8
 MODEL:
   NAME: 'TSN'
