perf(data): 更新transform实现,训练过程添加CenterCrop选项

--- a/configs/tsn_r50_jester_rgb_raw_seg_1x1x3.yaml
+++ b/configs/tsn_r50_jester_rgb_raw_seg_1x1x3.yaml
@@ -27,13 +27,22 @@ DATASETS:
     DATA_DIR: 'data/jester/20bn-jester-v1'
     ANNOTATION_DIR: 'data/jester'
 TRANSFORM:
-  TRAIN_CROP_SIZE: 224
-  TEST_CROP_SIZE: 256
-  SCALE_JITTER: (256, 320)
   MEAN: (0.485, 0.456, 0.406)
   STD: (0.229, 0.224, 0.225)
-  RANDOM_ROTATION: 10
-  COLOR_JITTER: (0.1, 0.1, 0.1, 0.1)
+  TRAIN:
+    SCALE_JITTER: (256, 320)
+    RANDOM_HORIZONTAL_FLIP: True
+    COLOR_JITTER: (0.1, 0.1, 0.1, 0.1)
+    RANDOM_ROTATION: 10
+    RANDOM_CROP: True
+    CENTER_CROP: False
+    TRAIN_CROP_SIZE: 224
+    RANDOM_ERASING: True
+  TEST:
+    SHORTER_SIDE: 256
+    CENTER_CROP: True
+    THREE_CROP: False
+    TEST_CROP_SIZE: 256
 DATALOADER:
   TRAIN_BATCH_SIZE: 32
   TEST_BATCH_SIZE: 32
