--- a/configs/tsn_r50_ucf101_rgbdiff_raw_seg_1x1x3.yaml
+++ b/configs/tsn_r50_ucf101_rgbdiff_raw_seg_1x1x3.yaml
@@ -29,17 +29,22 @@ DATASETS:
     ANNOTATION_DIR: 'data/ucf101'
     SPLIT: 1
 TRANSFORM:
-  TRAIN_CROP_SIZE: 224
-  TEST_CROP_SIZE: 256
-  SCALE_JITTER: (256, 320)
   MEAN: (0.485, 0.456, 0.406)
   STD: (0.229, 0.224, 0.225)
-  RANDOM_ROTATION: 10
-  COLOR_JITTER: (0.1, 0.1, 0.1, 0.1)
-DATALOADER:
-  TRAIN_BATCH_SIZE: 6
-  TEST_BATCH_SIZE: 6
-  NUM_WORKERS: 8
+  TRAIN:
+    SCALE_JITTER: (256, 320)
+    RANDOM_HORIZONTAL_FLIP: True
+    COLOR_JITTER: (0.1, 0.1, 0.1, 0.1)
+    RANDOM_ROTATION: 10
+    RANDOM_CROP: True
+    CENTER_CROP: False
+    TRAIN_CROP_SIZE: 224
+    RANDOM_ERASING: True
+  TEST:
+    SHORTER_SIDE: 256
+    CENTER_CROP: True
+    THREE_CROP: False
+    TEST_CROP_SIZE: 256
 MODEL:
   NAME: 'TSN'
   PRETRAINED: ""
