build(config): update

--- a/configs/tsn_r50_ucf101_rgbdiff_raw_seg_1x1x3.yaml
+++ b/configs/tsn_r50_ucf101_rgbdiff_raw_seg_1x1x3.yaml
@@ -45,6 +45,10 @@ TRANSFORM:
     CENTER_CROP: True
     THREE_CROP: False
     TEST_CROP_SIZE: 256
+DATALOADER:
+  TRAIN_BATCH_SIZE: 6
+  TEST_BATCH_SIZE: 6
+  NUM_WORKERS: 8
 MODEL:
   NAME: 'TSN'
   PRETRAINED: ""
@@ -58,7 +62,7 @@ MODEL:
   HEAD:
     NAME: 'TSNHead'
     FEATURE_DIMS: 2048
-    DROPOUT: 0.0
+    DROPOUT: 0.5
     NUM_CLASSES: 101
   RECOGNIZER:
     NAME: 'TSNRecognizer'
