--- a/configs/tsn_r50_jester_rgb_raw_seg_1x1x3.yaml
+++ b/configs/tsn_r50_jester_rgb_raw_seg_1x1x3.yaml
@@ -5,7 +5,7 @@ DIST_BACKEND: "nccl"
 RNG_SEED: 1
 OUTPUT_DIR: 'outputs/tsn_r50_jester_rgb_raw_seg_1x1x3'
 TRAIN:
-  MAX_ITER: 30000
+  MAX_ITER: 100000
   LOG_STEP: 10
   SAVE_STEP: 1000
   EVAL_STEP: 1000
@@ -60,7 +60,7 @@ MODEL:
   HEAD:
     NAME: 'TSNHead'
     FEATURE_DIMS: 2048
-    DROPOUT: 0.0
+    DROPOUT: 0.5
     NUM_CLASSES: 27
   RECOGNIZER:
     NAME: 'TSNRecognizer'
@@ -70,15 +70,16 @@ MODEL:
     NAME: 'CrossEntropyLoss'
 OPTIMIZER:
   NAME: 'sgd'
-  LR: 2e-3
-  WEIGHT_DECAY: 1e-4
+  LR: 1e-2
+  WEIGHT_DECAY: 1e-5
   SGD:
     MOMENTUM: 0.9
 LR_SCHEDULER:
-  NAME: 'cosine_annearling_lr'
+  NAME: 'multistep_lr'
   IS_WARMUP: True
-  COSINE_ANNEALING_LR:
-    MINIMAL_LR: 3e-4
+  GAMMA: 0.1
+  MULTISTEP_LR:
+    MILESTONES: [ 15000, 55000, 85000 ]
   WARMUP:
     ITERATION: 1000
     MULTIPLIER: 1.0
