--- a/configs/tsn_r50_ucf101_rgbdiff_raw_seg_1x1x3.yaml
+++ b/configs/tsn_r50_ucf101_rgbdiff_raw_seg_1x1x3.yaml
@@ -72,15 +72,16 @@ MODEL:
     NAME: 'CrossEntropyLoss'
 OPTIMIZER:
   NAME: 'sgd'
-  LR: 5e-3
+  LR: 1e-3
   WEIGHT_DECAY: 1e-4
   SGD:
     MOMENTUM: 0.9
 LR_SCHEDULER:
-  NAME: 'cosine_annearling_lr'
+  NAME: 'multistep_lr'
   IS_WARMUP: True
-  COSINE_ANNEALING_LR:
-    MINIMAL_LR: 3e-4
+  GAMMA: 0.2
+  MULTISTEP_LR:
+    MILESTONES: [ 15000, 25000 ]
   WARMUP:
     ITERATION: 1000
     MULTIPLIER: 1.0
