--- a/configs/tsn_r50_jester_rgbdiff_raw_seg_1x1x3.yaml
+++ b/configs/tsn_r50_jester_rgbdiff_raw_seg_1x1x3.yaml
@@ -69,17 +69,17 @@ MODEL:
   CRITERION:
     NAME: 'CrossEntropyLoss'
 OPTIMIZER:
-  NAME: 'sgd'
+  NAME: 'SGD'
   LR: 1e-3
-  WEIGHT_DECAY: 1e-4
+  WEIGHT_DECAY: 3e-5
   SGD:
     MOMENTUM: 0.9
 LR_SCHEDULER:
-  NAME: 'multistep_lr'
+  NAME: 'MultiStepLR'
   IS_WARMUP: True
   GAMMA: 0.2
   MULTISTEP_LR:
-    MILESTONES: [ 15000, 25000 ]
+    MILESTONES: [ 45000, 85000 ]
   WARMUP:
     ITERATION: 1000
     MULTIPLIER: 1.0
