perf(train): 使用epoch-iteration替代iteration训练模式；更新日志格式

--- a/configs/tsn_r50_ucf101_rgb_raw_dense_1x16x4.yaml
+++ b/configs/tsn_r50_ucf101_rgb_raw_dense_1x16x4.yaml
@@ -5,10 +5,10 @@ DIST_BACKEND: "nccl"
 RNG_SEED: 1
 OUTPUT_DIR: 'outputs/tsn_r50_ucf101_rgb_raw_dense_1x16x4'
 TRAIN:
-  MAX_ITER: 30000
   LOG_STEP: 10
-  SAVE_STEP: 1000
-  EVAL_STEP: 1000
+  MAX_EPOCH: 100
+  SAVE_EPOCH: 5
+  EVAL_EPOCH: 5
   RESUME: False
   USE_TENSORBOARD: True
 DATASETS:
@@ -81,7 +81,7 @@ LR_SCHEDULER:
   IS_WARMUP: True
   GAMMA: 0.2
   MULTISTEP_LR:
-    MILESTONES: [ 15000, 25000 ]
+    MILESTONES: [ 50, 80 ]
   WARMUP:
-    ITERATION: 400
+    ITERATION: 5
     MULTIPLIER: 1.0
