--- a/demo/tsn_r50_ucf101_rgb_raw_dense_1x16x4.yaml
+++ b/demo/tsn_r50_ucf101_rgb_raw_dense_1x16x4.yaml
@@ -3,12 +3,14 @@ NUM_NODES: 1
 RANK_ID: 0
 DIST_BACKEND: "nccl"
 RNG_SEED: 1
-OUTPUT_DIR: 'outputs/tsn_r50_ucf101_rgb_raw_dense_1x16x4'
 DATASETS:
   MODALITY: 'RGB'
+  TYPE: 'RawFrame'
+  SAMPLE_STRATEGY: 'DenseSample'
   CLIP_LEN: 1
   FRAME_INTERVAL: 16
   NUM_CLIPS: 4
+  NUM_SAMPLE_POSITIONS: 1
 TRANSFORM:
   MEAN: (0.485, 0.456, 0.406)
   STD: (0.229, 0.224, 0.225)
@@ -21,9 +23,8 @@ MODEL:
   NAME: 'TSN'
   PRETRAINED: ''
   SYNC_BN: True
-  INPUT_SIZE: (224, 224, 3)
   BACKBONE:
-    NAME: 'resnet50'
+    NAME: 'ResNet50'
     PARTIAL_BN: False
     TORCHVISION_PRETRAINED: True
     ZERO_INIT_RESIDUAL: True
