--- a/demo/tsn_r50_ucf101_rgb_raw_dense_1x16x4.yaml
+++ b/demo/tsn_r50_ucf101_rgb_raw_dense_1x16x4.yaml
@@ -43,10 +43,12 @@ VISUALIZATION:
   ENABLE: True
   THREAD_ENABLE: False
   WEBCAM: -1
-  INPUT_VIDEO: './demo/videos/v_Rowing_g15_c04.avi'
-#  INPUT_VIDEO: './demo/videos/v_Lunges_g16_c01.avi'
-  DISPLAY_WIDTH: 0
-  DISPLAY_HEIGHT: 0
+  #  INPUT_VIDEO: './demo/videos/125-1.mp4'
+  INPUT_VIDEO: './demo/videos/00000001415000201.mp4'
+  #  INPUT_VIDEO: './demo/videos/v_Rowing_g15_c04.avi'
+  #    INPUT_VIDEO: './demo/videos/v_Lunges_g16_c01.avi'
+#  DISPLAY_WIDTH: 1280
+#  DISPLAY_HEIGHT: 720
   OUTPUT_FPS: -1
-  OUTPUT_FILE: ""
+  #  OUTPUT_FILE: "./demo/results/v_Rowing_g15_c04_out.mp4"
   LABEL_FILE_PATH: 'data/ucf101/annotations/classInd.txt'
